Add reswet functionality for opto count node.

--- a/node-red-contrib-sm-ioplus/ioplus.html
+++ b/node-red-contrib-sm-ioplus/ioplus.html
@@ -210,6 +210,7 @@
     
     <p>You can specify the card stack level in the edit dialog box or programaticaly with the input message <code>msg.stack</code></p>
     <p>You can specify the channel number in the edit dialog box or programaticaly with the input message <code>msg.channel</code></p>
+    <p>You can reset the counter with the input message <code>msg.cntReset = 1</code></p>
 </script>
 
 <script type="text/javascript">
